# language

./: .editorconfig  3D_RENDERING_COMPLETE.md  CLEANUP_STATUS.md  CONTRIBUTING.md  Cargo.toml  JIT_IMPLEMENTATION_STATUS.md  MATRIX_LANG_COMPLETE_GUIDE.md  MATRIX_LANG_GUIDE.md  MATRIX_LANG_QUICK_START.md  QUANTUM_IMPLEMENTATION_COMPLETE.matrix  README-clean.md  README.md  REPO_ORGANIZATION_COMPLETE.md  RESTRUCTURING_COMPLETE.md  SECURITY.md  VIEWPORT_IMPROVEMENTS.md  VIEWPORT_SIMULATION_INTEGRATION.md  basic_test.matrix  bell_state_demo.matrix  clippy.toml  complete_quantum_test.matrix  comprehensive_directive_test.matrix  comprehensive_example.matrix  comprehensive_quantum_demo.matrix  debug_builtins.matrix  debug_builtins2.matrix  debug_test.matrix  debug_test.rs  demo_complete_system.sh  deny.toml  direct_pi_print.matrix  example.matrix  final_comprehensive_test.matrix  final_integration_test.matrix  final_verification.sh  functions_example.matrix  game_physics.matrix  int_var_print.matrix  libgame_view.rlib  math_example.matrix  (+34 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: README.md  ci.yml  cross-platform.yml  dependencies.yml  docs.yml  integration.yml  issue-labeler.yml  matrix-language-tests.yml  nightly.yml  performance.yml  release.yml
engine/: Cargo.toml  README.md  gui.rs  lib.rs  main.rs  physics_debugger.rs
engine/src/: animation_view.rs  game_view.rs  gui.rs  inspector.rs  ipc.rs  lib.rs  main.rs  rigid_body.rs  scene_manager.rs  scene_view.rs  scripting_panel.rs  soft_body.rs  unity_layout.rs
examples/: README.md  physics_basic.matrix  physics_multi_object.matrix  physics_pendulum.matrix  physics_test.matrix  physics_tower.matrix
examples/demos/: directive_demo.matrix
examples/physics_tests/: physics_animation_demo.matrix  test_directive.matrix  test_physics_animation_integration_fixed.matrix  test_plot_directive.matrix  test_sim_directive.matrix
examples/tests/: minimal_test.matrix  simple_sim_test.matrix  test_plot.matrix  working_sim_test.matrix
language-d7ef9a429bc2273c717ff9e99b136bc7f2ee3e52/: Cargo.toml  README.md
language-d7ef9a429bc2273c717ff9e99b136bc7f2ee3e52/src/: constraints.rs  gui.rs  lib.rs  main.rs  project_browser.rs  scripting_panel.rs  spatial.rs  systems.rs  viewport.rs
matrix-lang/: Cargo.toml  create_world.matrix  jit_test.matrix  libmod.rlib  matrix_lang_history.txt  physics_example.matrix  physics_simple.matrix  simple_physics.matrix
matrix-lang/examples/: matrix_lang_history.txt
matrix-lang/src/: debug_tests.rs  lib.rs  main.rs  main_new.rs
matrix-lang/src/ast/: nodes.rs  visitors.rs
matrix-lang/src/eval/: directive_tests.rs  interpreter.rs  mod.rs  simulation.rs
matrix-lang/src/gui/: animation_view.rs  game_view.rs  inspector.rs  mod.rs  object_hierarchy.rs  scene_view.rs  unity_layout.rs  viewport.rs
matrix-lang/src/ir/: mod.rs
matrix-lang/src/jit/: compiler.rs  executor.rs  mod.rs  optimization.rs
matrix-lang/src/lexer/: lexer.rs  mod.rs  tokens.rs
matrix-lang/src/parser/: mod.rs  parser.rs
matrix-lang/src/quantum/: algorithms.rs  circuit.rs  gates.rs  gui.rs  mod.rs  simulator.rs  state.rs  visualization.rs
matrix-lang/src/runtime/: mod.rs
matrix-lang/src/stdlib/: mod.rs  mod_simple.rs  physics.rs  quantum.rs  quantum_simple.rs
matrix-lang/src/types/: checker.rs  mod.rs  types.rs
matrix-lang/tests/: comprehensive_language_tests.rs  language_tests.rs  utils.rs  utils_fixed.rs
matrix-lang/tests/benchmarks/: mod.rs
matrix-lang/tests/integration/: comprehensive_tests.rs  matrix_language_integration_tests.rs  mod.rs
matrix-lang/tests/unit/: matrix_language_unit_tests.rs  mod.rs  parser_tests.rs
physics-engine/: Cargo.toml
physics-engine/src/: lib.rs
physics-engine/src/gpu/: mod.rs
physics-engine/src/physics/: constraints_backup.rs  differential.rs  fluid.rs  math.rs  mod.rs  rigid_body.rs  sampling.rs  soft_body.rs
physics-engine/tests/: integration_tests.rs
src/: debug_tests.rs  main.rs
src/ast/: mod.rs  nodes.rs  visitors.rs
src/ecs/: components.rs  mod.rs  resources.rs  systems.rs  world.rs
src/eval/: interpreter.rs  interpreter_clean.rs  interpreter_corrupted.rs
src/gpu/: mod.rs
src/gui/: console.rs  inspector.rs  mod.rs  object_hierarchy.rs  physics_debugger_fixed.rs  project_browser.rs  scene_manager.rs  scripting_panel.rs  viewport.rs
src/ir/: mod.rs
src/jit/: compiler.rs
src/lexer/: lexer.rs  tokens.rs
src/parser/: error.rs  mod.rs  parser.rs
src/physics/: constraints.rs  differential.rs  fluid.rs  integrators.rs  math.rs  mod.rs  rigid_body.rs  sampling.rs  soft_body.rs  spatial.rs
src/runtime/: mod.rs
src/stdlib/: mod.rs  mod_fixed.rs  mod_old.rs
src/tests/: comprehensive_tests.rs  interpreter_comprehensive.rs  mod.rs  parser_comprehensive.rs  test_utilities.rs
src/types/: checker.rs  types.rs
test_suite/: basic_tests.matrix  math_tests.matrix  physics_tests.matrix  quantum_tests.matrix  string_array_tests.matrix  test_runner.matrix
tests/: CI_CD_INTEGRATION.md  CI_CD_INTEGRATION_COMPLETE.md  COMPREHENSIVE_TEST_REPORT.md  README.md  run_all_tests.sh
tests/debug_scripts/: minimal_bug_repro.matrix  test_basic_if_lambda.matrix  test_block_only.matrix  test_complex.matrix  test_exact_context.matrix  test_exact_leipnik_pattern.matrix  test_exact_pattern.matrix  test_explicit_block.matrix  test_fixed_template.matrix  test_function_call_if.matrix  test_function_syntax_fixed.matrix  test_function_syntax_simple.matrix  test_generic_types.matrix  test_if_in_lambda_debug.matrix  test_if_in_let.matrix  test_if_let_body.matrix  test_if_method.matrix  test_if_method_condition.matrix  test_if_standalone.matrix  test_jit.matrix  test_jit_advanced.matrix  test_lambda_block.matrix  test_lambda_if_simple.matrix  test_lambda_method.matrix  test_lambda_params.matrix  test_lambda_simple.matrix  test_leipnik_section.matrix  test_method_calls.matrix  test_method_in_if.matrix  test_minimal.matrix  test_minimal_reproduction.matrix  test_no_args.matrix  test_object_creation.matrix  (+15 more)
(+42 files in other folders)
