[package]
name = "matrix-lang"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
description = "A functional matrix-oriented scripting language for physics simulation and GPU acceleration"

[dependencies]
# Essential parsing and CLI
logos = "0.13"
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = { version = "0.8", features = ["std"] }
rand_pcg = "0.3"

# GUI and Graphics
eframe = "0.24"
egui = "0.24"
egui_plot = "0.24"

# Optional dependencies (disabled for now due to linker issues)
# nom = "7.1"
# nalgebra = "0.32"
# wgpu = "0.19"
# tokio = { version = "1.35", features = ["full"] }
# rayon = "1.8"

# Optional JIT compilation
# inkwell = { version = "0.4", features = ["llvm17-0"], optional = true }

[features]
default = []
jit = []  # Enable when LLVM bindings are ready

[[bin]]
name = "matrix-lang"
path = "src/main.rs"
