[package]
name = "matrix-lang"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
description = "A functional matrix-oriented scripting language for physics simulation and GPU acceleration"

[dependencies]
# Essential parsing and CLI
logos = "0.13"
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = { version = "0.8", features = ["std"] }
rand_pcg = "0.3"

# GUI and Graphics
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
egui_dock = "0.16"

# ECS and Performance
bevy_ecs = "0.12"
rayon = "1.8"
nalgebra = "0.32"

# GPU computation
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
futures-intrusive = "0.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Optional dependencies (disabled for now due to linker issues)
# nom = "7.1"

# JIT compilation with LLVM
inkwell = { version = "0.4", features = ["llvm17-0"], optional = true }
llvm-sys = { version = "170", optional = true }
num_cpus = "1.17.0"

[features]
default = []
jit = ["inkwell", "llvm-sys"]

[[bin]]
name = "matrix-lang"
path = "src/main.rs"
