[package]
name = "physics-engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
description = "High-performance physics simulation engine with ECS architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/physics-engine"
readme = "README.md"

[dependencies]
# Internal dependencies
matrix-lang = { path = "../matrix-lang" }

# Core math and linear algebra
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }

# ECS and parallel computing
bevy_ecs = { workspace = true }
rayon = { workspace = true }

# GPU computation
wgpu = { workspace = true }
bytemuck = { workspace = true }
futures-intrusive = { workspace = true }

# Async runtime
tokio = { workspace = true }
num_cpus = { workspace = true }

# GUI for visualization (optional)
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
egui_dock = { workspace = true, optional = true }

[features]
default = ["gui"]
gui = ["eframe", "egui", "egui_plot", "egui_dock"]
gpu = []
debug = []

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
